--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,6 @@ plugins {
 
 group = 'com.eternity-bridge'
 version = '0.0.1-SNAPSHOT'
-def kotestVersion = "5.6.2"
 
 java {
 	toolchain {
@@ -43,11 +42,6 @@ dependencies {
 	testImplementation("com.h2database:h2")
 	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 
-	// KOTEST
-	testImplementation("io.kotest:kotest-runner-junit5-jvm:${kotestVersion}")
-	testImplementation("io.kotest:kotest-assertions-core-jvm:${kotestVersion}")
-	testImplementation("io.kotest.extensions:kotest-extensions-spring:1.1.3")
-
 	// Fixture Monkey
 	testImplementation("com.navercorp.fixturemonkey:fixture-monkey-kotlin:1.1.11")
 }
@@ -64,21 +58,36 @@ allOpen {
 	annotation 'jakarta.persistence.Embeddable'
 }
 
-// Querydsl QClass 생성 경로 설정
+// QueryDSL QClass 생성 경로를 프로젝트 루트의 src/main/generated로 설정
+def querydslGeneratedDir = 'src/main/generated'
+
+// 소스 디렉토리 설정
 sourceSets {
-	main {
-		kotlin.srcDir("$buildDir/generated/source/kapt/main")
-	}
+    main {
+        kotlin.srcDirs += [querydslGeneratedDir]
+    }
 }
 
+// KAPT 설정
+kapt {
+    javacOptions {
+        option("querydsl.generatedAnnotationClass", "javax.annotation.Generated")
+    }
+    keepJavacAnnotationProcessors = true
+    correctErrorTypes = true
+    generateStubs = true
+}
+
+// QClass 생성 위치 설정
 tasks.withType(JavaCompile).configureEach {
-	options.generatedSourceOutputDirectory = file("$projectDir/src/main/generated")
+    options.generatedSourceOutputDirectory = file(querydslGeneratedDir)
 }
 
-tasks.clean {
-	delete("src/main/generated")
+// Querydsl QClass 생성 디렉토리를 clean 태스크 실행 시 자동으로 제거
+clean {
+    delete file(querydslGeneratedDir)
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
+    useJUnitPlatform()
 }
